Embed issue list (from a different project)

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -27,7 +27,7 @@
         {% endif %}
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i" rel="stylesheet">
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
-        
+        <link rel="stylesheet" href="{{ 'assets/css/issues.css' | relative_url }}">
     </head>
     <body>
         
