--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,17 +55,19 @@
           </div><!-- .footer-nav-inside -->
         </nav><!-- .widget -->
         {% endif %}
-        {% assign has_subscribe_is_not_empty = site.footer.has_subscribe | is_not_empty %}
-        {% if has_subscribe_is_not_empty %}
-        <div class="widget footer-subscribe">
-          <h2 class="widget-title">{{ site.footer.subscribe_title }}</h2>
-          {% assign subscribe_content_is_not_empty = site.footer.subscribe_content | is_not_empty %}
-          {% if subscribe_content_is_not_empty %}
-          <p>{{ site.footer.subscribe_content }}</p>
-          {% endif %}
-          {% include subscribe_form.html %}
-        </div><!-- .widget -->
-        {% endif %}
+        <div class="widget">
+          <div class="social-nav">
+            <h2 class="widget-title">Links</h2>
+            <ul class="secondary-menu">
+              {% for action in site.footer.links %}
+              <li>
+                  
+                {% include action-link.html action=action %}
+              </li>
+              {% endfor %}
+            </ul><!-- .social-links -->
+          </div><!-- .widget -->
+        </div>
       </div><!-- .footer-widgets -->
     </div><!-- .inner -->
   </div><!-- .outer -->
