--- a/_includes/section_grid.html
+++ b/_includes/section_grid.html
@@ -1,4 +1,5 @@
 {% assign section = include.section %}
+
 <section id="{{ section.section_id }}" class="block posts-block bg-{{ section.background }} outer">
   <div class="block-header inner-small">
     {% assign title_is_not_empty = section.title | is_not_empty %}
@@ -12,28 +13,6 @@
     </p>
     {% endif %}
   </div><!-- .block-header -->
-  <div class="inner">
-    <div class="post-feed">
-      {% for item in section.items %}
-      <article class="post post-card">
-        <div class="post-card-inside">
-          {% assign thumb_image_is_not_empty = item.image | is_not_empty %}
-          {% if thumb_image_is_not_empty %}
-          <img class="thumbnail" src="{{ item.image | relative_url }}" alt="{{ item.image_alt }}" />
-          {% endif %}
-          <div class="post-card-content">
-            <header class="post-header">
-              <h3 class="post-title">{{ item.title }}</h3>
-            </header>
-            <div class="post-excerpt">
-              <p>{{ item.content }}</p>
-            </div>
-            
-            {% include blog_post_footer.html page=post date_type='short' %}
-          </div><!-- .post-card-content -->
-        </div><!-- .post-card-inside -->
-      </article><!-- .post -->
-      {% endfor %}
-    </div><!-- .post-feed -->
-  </div><!-- .inner -->
+  
+  {% include inner_grid.html section=section site=site %}
 </section><!-- .block -->
