--- a/_sass/imports/_posts.scss
+++ b/_sass/imports/_posts.scss
@@ -101,6 +101,10 @@
     margin: 0 0.833333em;
   }
 
+  .post-card-inside > a {
+    border-bottom: none;
+  }
+
   .post-card-thumbnail {
     border: 0;
     border-radius: 3px 3px 0 0;
