--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -32,6 +32,7 @@ $palette: (
 @import "imports/header";
 @import "imports/posts";
 @import "imports/sections";
+@import "imports/team";
 @import "imports/footer";
 @import "imports/palettes";
 @import "imports/banner";
