--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,6 +28,7 @@
         <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i" rel="stylesheet">
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
         <link rel="stylesheet" href="{{ 'assets/css/issues.css' | relative_url }}">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         
